# rag-portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/eval/: golden_qa.jsonl
docker/: Dockerfile  docker-compose.yml  mlflow.Dockerfile
scripts/: run_eval.py  seed_data.py
src/: config.py
src/api/: dependencies.py  main.py
src/api/routers/: documents.py  feedback.py  health.py  ingest.py  query.py
src/api/schemas/: documents.py  feedback.py  ingest.py  query.py
src/db/: connection.py  models.py
src/db/repositories/: chunk_repo.py  query_log_repo.py
src/mlops/: drift_monitor.py  evaluator.py  tracker.py
src/pipeline/: ingestion_pipeline.py
src/pipeline/loaders/: jsonl_loader.py  pdf_loader.py  url_loader.py
src/pipeline/transformers/: chunker.py  cleaner.py  metadata_enricher.py
src/rag/: chain.py  embedder.py  prompt_templates.py  retriever.py
tests/: conftest.py
tests/api/: test_documents_endpoint.py  test_feedback_endpoint.py  test_health.py  test_ingest_endpoint.py  test_query_endpoint.py
tests/integration/: test_ingestion_pipeline.py
tests/unit/: test_chain.py  test_chunker.py  test_cleaner.py  test_drift_monitor.py  test_embedder.py  test_evaluator.py  test_loaders.py  test_metadata_enricher.py  test_prompt_templates.py  test_retriever.py
