[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledgeforge"
version = "0.1.0"
description = "RAG-powered document Q&A platform — portfolio project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-postgres>=0.0.12",
    "langchain-community>=0.3.0",
    "pymupdf>=1.25.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.3",
    "tiktoken>=0.9.0",
    "mlflow>=3.1.0",
    "prometheus-client>=0.21.0",
    "structlog>=25.1.0",
    "python-multipart>=0.0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.9.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-beautifulsoup4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/db/migrations/*"]

[tool.coverage.report]
fail_under = 75
